--- a/Website makanan/index.html
+++ b/Website makanan/index.html
@@ -38,7 +38,7 @@
                 <h2 class=""> <u> Makanan Berat</u></h2>
                 <div class="image">
                     <div class="thumbnail">
-                        <a href="Oporayam/oporayam.html"><img src="img/oporayam.jpg" width="300px" height="200px"
+                        <a href="oporayam/oporayam.html"><img src="img/oporayam.jpg" width="300px" height="200px"
                                 alt="">
                             <p>OPOR AYAM</p>
                         </a>
